[gd_scene load_steps=20 format=3 uid="uid://cyprehki1hi4w"]

[ext_resource type="Script" uid="uid://dlfp6dttjlip5" path="res://scripts/characters/player.gd" id="1_3mip4"]
[ext_resource type="Texture2D" uid="uid://c53imoycnjus5" path="res://assets/tiles/Tilemap/monochrome_tilemap_transparent.png" id="1_674bt"]
[ext_resource type="Material" uid="uid://bfg8b034nafme" path="res://shaders/shockwave.tres" id="1_insbl"]
[ext_resource type="Shader" uid="uid://ctv1st0suadf3" path="res://shaders/CRT.gdshader" id="4_rug40"]
[ext_resource type="PackedScene" uid="uid://cvf7jxcgc87co" path="res://scenes/ui/pause_menu.tscn" id="5_mxi64"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yceh7"]
atlas = ExtResource("1_674bt")
region = Rect2(102, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxi64"]
atlas = ExtResource("1_674bt")
region = Rect2(119, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mip4"]
atlas = ExtResource("1_674bt")
region = Rect2(0, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeibo"]
atlas = ExtResource("1_674bt")
region = Rect2(17, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rug40"]
atlas = ExtResource("1_674bt")
region = Rect2(34, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uovkd"]
atlas = ExtResource("1_674bt")
region = Rect2(51, 204, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_insbl"]
atlas = ExtResource("1_674bt")
region = Rect2(68, 204, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nsdob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yceh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxi64")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mip4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeibo")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rug40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uovkd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_insbl")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeibo"]
size = Vector2(8, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mxi64"]
shader = ExtResource("4_rug40")
shader_parameter/overlay = false
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/brightness = 1.4
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/roll = true
shader_parameter/roll_speed = 100.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.095
shader_parameter/aberration = 0.0790001
shader_parameter/noise_opacity = 1.0
shader_parameter/noise_speed = 3.425
shader_parameter/static_noise_intensity = 0.277
shader_parameter/pixelate = true
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.225
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="Animation" id="Animation_br4xv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mqvp3"]
resource_name = "shockwave"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 2.0]
}

[sub_resource type="Animation" id="Animation_insbl"]
resource_name = "shockwave-end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lk84l"]
_data = {
&"RESET": SubResource("Animation_br4xv"),
&"shockwave": SubResource("Animation_mqvp3"),
&"shockwave-end": SubResource("Animation_insbl")
}

[node name="Player" type="CharacterBody2D"]
material = ExtResource("1_insbl")
collision_layer = 3
script = ExtResource("1_3mip4")

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_nsdob")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_jeibo")
debug_color = Color(0, 0.6, 0.701961, 0.133333)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
position_smoothing_enabled = true
position_smoothing_speed = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
z_index = 2
material = ExtResource("1_insbl")
custom_minimum_size = Vector2(500, 500)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="CRT" type="ColorRect" parent="Camera2D/CanvasLayer"]
visible = false
z_index = 2
material = SubResource("ShaderMaterial_mxi64")
custom_minimum_size = Vector2(500, 500)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/CanvasLayer"]
root_node = NodePath("../ColorRect")
libraries = {
&"": SubResource("AnimationLibrary_lk84l")
}

[node name="PauseMenuCanvas" parent="." instance=ExtResource("5_mxi64")]

[connection signal="entered_game" from="." to="." method="_on_entered_game"]
[connection signal="player_rewinded" from="." to="." method="_on_player_rewinded"]
